<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="onChangeModeUi"
            type="android.view.View.OnClickListener" />
    </data>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/main_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.HomeFragment">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_20">

                <ProgressBar
                    android:id="@+id/progress_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/bold"
                    android:text="@string/app_name"
                    android:textColor="@color/app_main_color"
                    android:textSize="@dimen/sp_20"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/ic_theme_mode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/light_or_dark_icon"
                    android:onClick="@{onChangeModeUi}"
                    android:src="@drawable/ic_dark_mode"
                    app:layout_constraintBottom_toBottomOf="@+id/textView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView"
                    app:layout_constraintVertical_bias="0.0" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/editText"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/et_input"
                    android:importantForAutofill="no"
                    android:paddingStart="@dimen/dp_20"
                    app:layout_constraintEnd_toEndOf="@+id/ic_theme_mode"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="@+id/textView"
                    app:layout_constraintTop_toBottomOf="@+id/textView"
                    tools:ignore="RtlSymmetry">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/search_icon"
                        android:src="@drawable/ic_search"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:text="@string/search_news"
                        android:textColor="@color/et_search_color"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toEndOf="@+id/imageView3"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/bold"
                    android:text="@string/popular_news"
                    android:textColor="@color/app_main_color"
                    android:textSize="@dimen/sp_18"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/editText"
                    app:layout_constraintTop_toBottomOf="@+id/editText" />


                <com.facebook.shimmer.ShimmerFrameLayout
                    android:id="@+id/shimmerLayoutPopular"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_20"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/textView2"
                    app:layout_constraintTop_toBottomOf="@+id/textView2"
                    tools:ignore="MissingConstraints">

                    <HorizontalScrollView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scrollbars="none">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <include layout="@layout/popular_news_shimmer" />

                            <include layout="@layout/popular_news_shimmer" />

                            <include layout="@layout/popular_news_shimmer" />

                        </LinearLayout>

                    </HorizontalScrollView>

                </com.facebook.shimmer.ShimmerFrameLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/popular_news_rcv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_20"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/textView2"
                    app:layout_constraintTop_toBottomOf="@+id/textView2"
                    tools:listitem="@layout/item_popular_news" />


                <TextView
                    android:id="@+id/recent_news"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="40dp"
                    android:fontFamily="@font/bold"
                    android:text="@string/recent_news"
                    android:textColor="@color/app_main_color"
                    android:textSize="@dimen/sp_18"
                    android:textStyle="bold"
                    android:visibility="visible"
                    app:layout_constraintStart_toStartOf="@+id/popular_news_rcv"
                    app:layout_constraintTop_toBottomOf="@+id/shimmerLayoutPopular" />

                <com.facebook.shimmer.ShimmerFrameLayout
                    android:id="@+id/shimmerLayoutRecent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_20"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/recent_news"
                    app:layout_constraintTop_toBottomOf="@+id/recent_news"
                    tools:ignore="MissingConstraints">

                    <ScrollView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scrollbars="none">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <include layout="@layout/recent_news_shimmer" />

                            <include layout="@layout/recent_news_shimmer" />

                            <include layout="@layout/recent_news_shimmer" />

                        </LinearLayout>

                    </ScrollView>

                </com.facebook.shimmer.ShimmerFrameLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recent_news_rcv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_20"
                    android:nestedScrollingEnabled="false"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="@+id/popular_news_rcv"
                    app:layout_constraintStart_toStartOf="@+id/recent_news"
                    app:layout_constraintTop_toBottomOf="@+id/recent_news"
                    tools:listitem="@layout/item_recent_news" />


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/lyt_error"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="150dp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView2"
                    app:layout_constraintVertical_bias="0.0"
                    tools:visibility="gone">


                    <ImageView
                        android:id="@+id/ic_sad"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_sad"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="@dimen/dp_20"
                        android:layout_marginEnd="30dp"
                        android:text="@string/text_too_many_request_error"
                        android:textAlignment="center"
                        android:textColor="@color/text_color"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/ic_sad" />

                    <Button
                        android:id="@+id/btn_retry"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_marginTop="@dimen/dp_20"
                        android:text="@string/retry"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView6" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</layout>
